Fixing font weigth on ios

--- a/home.css
+++ b/home.css
@@ -11,6 +11,9 @@
     justify-content: space-between;
     height: 100vh;
 }
+.home *{
+    font-weight: bold;
+}
 .text_wrapper{
     animation: slide-right 1.5s normal;
 }
@@ -37,6 +40,14 @@
     font-size: 2vw;
 }
 
+.nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    animation: slide-left 1.5s normal;
+}
+
 .nav div {
     margin: 15px 0px;
     font-weight: bold;
@@ -52,13 +63,6 @@
     color: white;
 }
 
-.nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    animation: slide-left 1.5s normal;
-}
 @keyframes slide-left {
     from {
       margin-right: -200vw;
